message : sonarqube exception modify